# impresso-py

./: .apigen.yml  .flake8  .gitignore  .readthedocs.yml  404.html  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
.github/workflows/: python-publish-test.yml  python-publish.yml  qa.yml
docs/: index.md  preparing_queries.md  resources.md  result.md
examples/notebooks/: api_client_test.ipynb  basic.ipynb  collections.ipynb  data_providers.ipynb  entities.ipynb  experiments.ipynb  images.ipynb  media_sources.ipynb  newspapers.ipynb  search.ipynb  textReuse.ipynb  tools.ipynb  topics.ipynb
impresso/: __init__.py  api_models.py  client.py  client_base.py  config_file.py  data_container.py  echo.py  structures.py
impresso/api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
impresso/api_client/api/: __init__.py  articles_api.py  authentication_api.py  search_api.py
impresso/api_client/api/admin/: admin_find.py  admin_patch.py
impresso/api_client/api/articles/: find_articles.py  get_articles.py  get_articles_id.py
impresso/api_client/api/authentication/: post_authentication.py
impresso/api_client/api/collections/: add_collectable_items_from_filters.py  create_collection.py  delete_collections_id.py  find_collections.py  get_collection.py  get_collections.py  get_collections_id.py  patch_collections_collection_id_items.py  patch_collections_id.py  post_collections.py  remove_collection.py  update_collection.py
impresso/api_client/api/content_items/: get_content_item.py
impresso/api_client/api/data_providers/: find_data_providers.py  get_data_provider.py
impresso/api_client/api/entities/: find_entities.py  get_entity.py
impresso/api_client/api/experiments/: find_experiments.py  interact_with_experiment.py
impresso/api_client/api/images/: find_images.py  get_image.py
impresso/api_client/api/media_sources/: find_media_sources.py  get_media_source.py
impresso/api_client/api/newspapers/: find_newspapers.py  get_newspapers.py  get_newspapers_id.py
impresso/api_client/api/not_used/: patch_collections_collection_id_items_id.py
impresso/api_client/api/reference_data/: get_content_item_types_csv_export.py  get_data_providers_csv_export.py  get_data_sources_csv_export.py
impresso/api_client/api/search/: get_search.py  search.py
impresso/api_client/docs/: Article.md  ArticlesApi.md  ArticlesGetFiltersParameter.md  AuthRequestSchema.md  AuthResponseSchema.md  AuthResponseSchemaAuthentication.md  AuthenticationApi.md  Entity.md  Page.md  SearchApi.md  SearchGetFiltersParameterInner.md  SearchGetFiltersParameterInnerQ.md  SearchList.md  User.md
impresso/api_client/models/: __init__.py  add_collectable_items_from_filters.py  add_collectable_items_from_filters_namespace.py  admin_get_response.py  admin_get_response_cache_counts.py  admin_get_response_content_items_permissions_details.py  admin_get_response_images_permissions_details.py  admin_get_response_patch_result.py  admin_get_response_patch_result_cleared.py  admin_get_response_user_accounts_item.py  admin_get_response_well_known_computed_at.py  admin_patch_request.py  admin_patch_request_action.py  article.py  article_search_response.py  article_search_response_info.py  articles_get_filters_parameter.py  auth_request_schema.py  auth_response_schema.py  auth_response_schema_authentication.py  authentication_create_request.py  authentication_create_request_strategy.py  authentication_request.py  authentication_request_strategy.py  authentication_response.py  base_find.py  base_user.py  collection.py  collection_remove_response.py  collection_remove_response_params.py  collection_remove_response_params_status.py  collection_remove_response_task.py  content_item.py  content_item_access_bitmaps.py  content_item_access_rights.py  content_item_access_rights_copyright.py  content_item_access_rights_data_domain.py  content_item_audio.py  content_item_audio_locator.py  content_item_audio_record.py  (+130 more)
impresso/protobuf/: query_pb2.py  query_pb2.pyi
impresso/resources/: articles.py  base.py  collections.py  content_items.py  data_providers.py  entities.py  experiments.py  images.py  media_sources.py  newspapers.py  search.py  search_facets.py  tools.py  topics.py
impresso/resources/text_reuse/: __init__.py  clusters.py  passages.py
impresso/util/: embeddings.py  error.py  filters.py  py.py  token.py
preparing_queries/: index.html
resources/: index.html
result/: index.html
scripts/: generate_data_models.sh  generate_openapi_client.sh  generate_protobuf.sh  scripts.py
search/: search_index.json
tests/: test_echo.py
tests/api_client/: test_article.py  test_articles_api.py  test_articles_get_filters_parameter.py  test_auth_request_schema.py  test_auth_response_schema.py  test_auth_response_schema_authentication.py  test_authentication_api.py  test_entity.py  test_page.py  test_search_api.py  test_search_get_filters_parameter_inner.py  test_search_get_filters_parameter_inner_q.py  test_search_list.py  test_user.py
tests/impresso/: test_structures.py
(+22 files in other folders)
