[tool.poetry]
authors = ["Daniele Guido <daniele.guido@uni.lu>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "A Python package to explore the impresso API"
documentation = "https://impresso-py.readthedocs.io/en/latest/"
homepage = "https://github.com/impresso/impresso-py"
name = "impresso"
packages = [
  {include = "impresso", from = "."},
]
readme = "README.md"
repository = "https://github.com/impresso/impresso-py"
version = "0.1.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"
Endpoint = "https://dev.impresso-project.ch/api/public"
Issues = "https://github.com/impresso/impresso-py/issues"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
PyJWT = "2.8.0"
attrs = "23.2.0"
httpx = "0.27.0"
pandas = "2.2.1"
pandas-stubs = "2.2.2.240603"
protobuf = "5.27.2"
pydantic = "2.6.4"
python = "^3.11.0"
python-dateutil = "2.9.0"
types-PyYAML = "6.0.12.20240311"
types-protobuf = "5.27.0.20240626"

[tool.poetry.dev-dependencies]
black = "24.3.0"
datamodel-code-generator = "0.25.6"
flake8 = "7.0.0"
mypy = "1.9.0"
# openapi-python-client = "0.19.1"
# Waiting for a PR to be accepted. Meanwhile update with:
openapi-python-client = {git = "https://github.com/theorm/openapi-python-client.git#name=openapi-python-client", branch = "develop"}
pytest = "8.1.1"

[tool.mypy]
exclude = ["impresso/api_client", "impresso/protobuf"]

[tool.poetry.scripts]
generate-client = "scripts.scripts:generate_api_client"
generate-protobuf = "scripts.scripts:generate_protobuf"
